.apex/unpackaged/objects/redwing__Answer_Sequence_Item__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Answer_Sequence__c</fullName>
        <label>Answer Sequence</label>
        <referenceTo>redwing__Answer_Sequence__c</referenceTo>
        <relationshipLabel>Answer Sequence Items</relationshipLabel>
        <relationshipName>Answer_Sequence_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Answer_Text__c</fullName>
        <label>Answer Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Is_Correct_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Correct Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Item_Id__c</fullName>
        <externalId>true</externalId>
        <label>Answer Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Answer Sequence Item</label>
    <nameField>
        <displayFormat>ASI-{0000000}</displayFormat>
        <label>Answer Sequence Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer Sequence Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>redwing__item_id_specia_chars_validation</fullName>
        <active>true</active>
        <description>Prevent special characters in item id</description>
        <errorConditionFormula>CONTAINS( redwing__Item_Id__c ,&quot;;&quot;)</errorConditionFormula>
        <errorDisplayField>redwing__Item_Id__c</errorDisplayField>
        <errorMessage>Item Id contains un-supported special characters, please update the item id</errorMessage>
    </validationRules>
</CustomObject>